--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,10 @@
-DirectoryIndex index.html index.php
+DirectoryIndex  index.php index.html
+RewriteCond !/$
+RewriteCond !\.php$
+
+# Check if it's actually a dir and if index.html exists
+RewriteCond %{REQUEST_URI} -d
+RewriteCond %{REQUEST_URI}/index.php -f
+
+# Rewrite anything that gets through (Probably insecure, but you get the idea)
+RewriteRule ^(.*)$ $1/index.php
